--- a/.github/workflows/sync-progress.yml
+++ b/.github/workflows/sync-progress.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Sync Progress
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AI_PROGRESS_TOKEN: ${{ secrets.AI_PROGRESS_TOKEN }}
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
