--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.1.0",
-    "@octokit/rest": "^19.0.7",
-    "express": "^4.18.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
+    "@craco/craco": "7.1.0",
+    "@octokit/rest": "19.0.7",
+    "express": "4.18.2",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9",
-    "axios": "^1.4.0",
-    "lodash": "^4.17.21"
+    "styled-components": "5.3.9",
+    "axios": "1.4.0",
+    "lodash": "4.17.21"
   },
   "scripts": {
-    "update-imports": "node update-imports.js"
     "start": "node server.js",
     "dev": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "update-imports": "node update-imports.js"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +42,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "eslint": "8.43.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0"
   }
 }
