--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "build": "craco build",
     "test": "craco test",
     "update-imports": "node update-imports.js"
+        "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx}",
+    "lint:fix": "eslint src/**/*.{js,jsx} --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +48,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@craco/craco": "7.1.0",
     "eslint": "8.43.0",
     "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0"
   }
